--- a/itc/_config.yml
+++ b/itc/_config.yml
@@ -5,7 +5,7 @@
 
 #######################################################################################
 # Book settings
-title                       : itc  # The title of the book. Will be placed in the left navbar.
+title                       : Informatique Tronc Commun en CPGE  # The title of the book. Will be placed in the left navbar.
 author                      : Quentin Fortier  # The author of the book
 copyright                   : "2021"  # Copyright year to be placed in the footer
 logo                        : logo.png  # A path to the book logo
