--- a/itc/_toc.yml
+++ b/itc/_toc.yml
@@ -2,6 +2,8 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 #
 - file: intro
+  sections:
+    - file: programmation/variables
 - file: content
   sections:
     - file: markdown
