--- a/itc/_config.yml
+++ b/itc/_config.yml
@@ -9,3 +9,8 @@ title                       : Informatique Tronc Commun en CPGE  # The title of 
 author                      : Quentin Fortier  # The author of the book
 copyright                   : "2021"  # Copyright year to be placed in the footer
 logo                        : logo.png  # A path to the book logo
+execute:
+  execute_notebooks: force
+repository:
+  url                       : https://github.com/fortierq/itc/  # Online location of your book
+  path_to_book              : itc/
