--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ bleach==3.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or pyth
 certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 cffi==1.14.5; python_full_version >= "3.6.1" and python_version >= "3.6" and implementation_name == "pypy"
 chardet==4.0.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-click==8.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" and sys_platform == "win32" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0" and sys_platform == "win32"
+click==7.1.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
+colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0"
 cookiecutter==1.7.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 decorator==5.0.9; python_version >= "3.7"
 defusedxml==0.7.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -25,6 +25,7 @@ gitpython==3.1.17; python_version >= "3.6"
 idna==2.10; python_full_version >= "3.6.2" and python_version >= "3.6"
 imagesize==1.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 importlib-metadata==4.5.0; python_version >= "3.6"
+importlib-resources==5.1.4; python_version < "3.9" and python_version >= "3.6"
 ipykernel==5.5.5; python_version >= "3.6"
 ipython-genutils==0.2.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 ipython==7.24.1; python_version >= "3.7"
@@ -33,14 +34,14 @@ jedi==0.18.0; python_version >= "3.7"
 jinja2-time==0.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 jinja2==3.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 jsonschema==3.2.0; python_version >= "3.6"
-jupyter-book==0.10.2; python_version >= "3.6"
+jupyter-book==0.11.1; python_version >= "3.6"
 jupyter-cache==0.4.2; python_version >= "3.6"
 jupyter-client==6.2.0; python_full_version >= "3.6.1" and python_version >= "3.6"
 jupyter-core==4.7.1; python_full_version >= "3.6.1" and python_version >= "3.6"
 jupyter-server-mathjax==0.2.3; python_version >= "3.6"
 jupyter-server==1.8.0; python_version >= "3.6"
 jupyter-sphinx==0.3.2; python_version >= "3.6"
-jupyterbook-latex==0.2.0; python_version >= "3.6"
+jupyterbook-latex==0.3.1; python_version >= "3.6"
 jupyterlab-widgets==1.0.0; python_version >= "3.6"
 jupytext==1.10.3; python_version >= "3.6" and python_version < "4.0"
 latexcodec==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
@@ -57,7 +58,6 @@ nbconvert==5.6.1; python_version >= "3.6" and python_full_version < "3.0.0" or p
 nbdime==3.1.0; python_version >= "3.6"
 nbformat==5.1.3; python_version >= "3.6" and python_version < "4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.6.1"
 nest-asyncio==1.5.1; python_full_version >= "3.6.1" and python_version >= "3.6"
-nested-lookup==0.2.22; python_version >= "3.6"
 notebook==6.4.0; python_version >= "3.6"
 packaging==20.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 pandocfilters==1.4.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -93,12 +93,13 @@ soupsieve==2.2.1; python_version >= "3.6"
 sphinx-book-theme==0.1.0; python_version >= "3.6"
 sphinx-comments==0.0.3; python_version >= "3.6"
 sphinx-copybutton==0.3.1; python_version >= "3.6"
+sphinx-external-toc==0.2.0; python_version >= "3.6" and python_version < "4.0"
 sphinx-panels==0.5.2; python_version >= "3.6"
 sphinx-thebe==0.0.8; python_version >= "3.6"
 sphinx-togglebutton==0.2.3; python_version >= "3.6"
-sphinx==3.5.4; python_version >= "3.6"
+sphinx==3.5.4; python_version >= "3.6" and python_version < "4.0"
 sphinxcontrib-applehelp==1.0.2; python_version >= "3.6"
-sphinxcontrib-bibtex==2.1.4; python_version >= "3.6"
+sphinxcontrib-bibtex==2.2.1; python_version >= "3.6"
 sphinxcontrib-devhelp==1.0.2; python_version >= "3.6"
 sphinxcontrib-htmlhelp==2.0.0; python_version >= "3.6"
 sphinxcontrib-jsmath==1.0.1; python_version >= "3.6"
@@ -117,4 +118,4 @@ wcwidth==0.2.5; python_full_version >= "3.6.1" and python_version >= "3.7"
 webencodings==0.5.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 websocket-client==1.0.1; python_version >= "3.6"
 widgetsnbextension==3.5.1; python_version >= "3.6"
-zipp==3.4.1; python_version >= "3.6"
+zipp==3.4.1; python_version < "3.9" and python_version >= "3.6"
