--- a/requirements.txt
+++ b/requirements.txt
@@ -1,121 +1,12 @@
-alabaster==0.7.12; python_version >= "3.6"
-anyio==3.1.0; python_full_version >= "3.6.2" and python_version >= "3.6"
-appnope==0.1.2; sys_platform == "darwin" and python_version >= "3.7" and platform_system == "Darwin"
-argon2-cffi==20.1.0; python_version >= "3.6"
-arrow==1.1.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-async-generator==1.10; python_full_version >= "3.6.1" and python_version >= "3.6"
-attrs==20.3.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.4.0" and python_version >= "3.6" and python_version < "4.0"
-babel==2.9.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-backcall==0.2.0; python_version >= "3.7"
-beautifulsoup4==4.9.3; python_version >= "3.6"
-binaryornot==0.4.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-bleach==3.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-certifi==2021.5.30; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-cffi==1.14.5; python_full_version >= "3.6.1" and python_version >= "3.6" and implementation_name == "pypy"
-chardet==4.0.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-click==7.1.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.5.0" and python_version >= "3.6" and python_version < "4.0"
-colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0"
-cookiecutter==1.7.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-decorator==5.0.9; python_version >= "3.7"
-defusedxml==0.7.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-docutils==0.16; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-entrypoints==0.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-gitdb==4.0.7; python_version >= "3.6"
-gitpython==3.1.17; python_version >= "3.6"
-idna==2.10; python_full_version >= "3.6.2" and python_version >= "3.6"
-imagesize==1.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-importlib-metadata==4.5.0; python_version >= "3.6"
-importlib-resources==5.1.4; python_version < "3.9" and python_version >= "3.6"
-ipykernel==5.5.5; python_version >= "3.6"
-ipython-genutils==0.2.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-ipython==7.24.1; python_version >= "3.7"
-ipywidgets==7.6.3; python_version >= "3.6"
-jedi==0.18.0; python_version >= "3.7"
-jinja2-time==0.2.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-jinja2==3.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-jsonschema==3.2.0; python_version >= "3.6"
-jupyter-book==0.11.1; python_version >= "3.6"
-jupyter-cache==0.4.2; python_version >= "3.6"
-jupyter-client==6.2.0; python_full_version >= "3.6.1" and python_version >= "3.6"
-jupyter-core==4.7.1; python_full_version >= "3.6.1" and python_version >= "3.6"
-jupyter-server-mathjax==0.2.3; python_version >= "3.6"
-jupyter-server==1.8.0; python_version >= "3.6"
-jupyter-sphinx==0.3.2; python_version >= "3.6"
-jupyterbook-latex==0.3.1; python_version >= "3.6"
-jupyterlab-widgets==1.0.0; python_version >= "3.6"
-jupytext==1.10.3; python_version >= "3.6" and python_version < "4.0"
-latexcodec==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-linkify-it-py==1.0.1; python_version >= "3.6"
-markdown-it-py==0.6.2; python_version >= "3.6" and python_version < "4.0"
-markupsafe==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-matplotlib-inline==0.1.2; python_version >= "3.7"
-mdit-py-plugins==0.2.6; python_version >= "3.6" and python_version < "4.0"
-mistune==0.8.4; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-myst-nb==0.12.3; python_version >= "3.6"
-myst-parser==0.13.7; python_version >= "3.6"
-nbclient==0.5.3; python_full_version >= "3.6.1" and python_version >= "3.6"
-nbconvert==5.6.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-nbdime==3.1.0; python_version >= "3.6"
-nbformat==5.1.3; python_version >= "3.6" and python_version < "4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.6.1"
-nest-asyncio==1.5.1; python_full_version >= "3.6.1" and python_version >= "3.6"
-notebook==6.4.0; python_version >= "3.6"
-packaging==20.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pandocfilters==1.4.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-parso==0.8.2; python_version >= "3.7"
-pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.7"
-pickleshare==0.7.5; python_version >= "3.7"
-poyo==0.5.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-prometheus-client==0.11.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-prompt-toolkit==3.0.18; python_full_version >= "3.6.1" and python_version >= "3.7"
-ptyprocess==0.7.0; sys_platform != "win32" and python_version >= "3.7" and os_name != "nt"
-py==1.10.0; python_full_version >= "3.6.1" and python_version >= "3.6" and implementation_name == "pypy"
-pybtex-docutils==1.0.0; python_version >= "3.6"
-pybtex==0.24.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
-pycparser==2.20; python_full_version >= "3.6.1" and python_version >= "3.6" and implementation_name == "pypy"
-pydata-sphinx-theme==0.6.3; python_version >= "3.6"
-pygments==2.9.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
-pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pyrsistent==0.17.3; python_version >= "3.6"
-python-dateutil==2.8.1; python_full_version >= "3.6.1" and python_version >= "3.6"
-python-slugify==5.0.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pytz==2021.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pywin32==301; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_full_version >= "3.5.0" and python_version >= "3.6" and sys_platform == "win32"
-pywinpty==1.1.1; os_name == "nt" and python_version >= "3.6"
-pyyaml==5.4.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_full_version >= "3.6.0" and python_version >= "3.6" and python_version < "4.0"
-pyzmq==22.1.0; python_full_version >= "3.6.1" and python_version >= "3.6"
-requests==2.25.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-send2trash==1.5.0; python_version >= "3.6"
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-smmap==4.0.0; python_version >= "3.6"
-sniffio==1.2.0; python_full_version >= "3.6.2" and python_version >= "3.6"
-snowballstemmer==2.1.0; python_version >= "3.6"
-soupsieve==2.2.1; python_version >= "3.6"
-sphinx-book-theme==0.1.0; python_version >= "3.6"
-sphinx-comments==0.0.3; python_version >= "3.6"
-sphinx-copybutton==0.3.1; python_version >= "3.6"
-sphinx-external-toc==0.2.0; python_version >= "3.6" and python_version < "4.0"
-sphinx-panels==0.5.2; python_version >= "3.6"
-sphinx-thebe==0.0.8; python_version >= "3.6"
-sphinx-togglebutton==0.2.3; python_version >= "3.6"
-sphinx==3.5.4; python_version >= "3.6" and python_version < "4.0"
-sphinxcontrib-applehelp==1.0.2; python_version >= "3.6"
-sphinxcontrib-bibtex==2.2.1; python_version >= "3.6"
-sphinxcontrib-devhelp==1.0.2; python_version >= "3.6"
-sphinxcontrib-htmlhelp==2.0.0; python_version >= "3.6"
-sphinxcontrib-jsmath==1.0.1; python_version >= "3.6"
-sphinxcontrib-qthelp==1.0.3; python_version >= "3.6"
-sphinxcontrib-serializinghtml==1.1.5; python_version >= "3.6"
-sqlalchemy==1.3.24; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-terminado==0.10.0; python_version >= "3.6"
-testpath==0.5.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-text-unidecode==1.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.3.0"
-tornado==6.1; python_full_version >= "3.6.1" and python_version >= "3.6"
-traitlets==5.0.5; python_full_version >= "3.6.1" and python_version >= "3.7"
-uc-micro-py==1.0.1; python_version >= "3.6"
-urllib3==1.26.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
-wcwidth==0.2.5; python_full_version >= "3.6.1" and python_version >= "3.7"
-webencodings==0.5.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-websocket-client==1.0.1; python_version >= "3.6"
-widgetsnbextension==3.5.1; python_version >= "3.6"
-zipp==3.4.1; python_version < "3.9" and python_version >= "3.6"
+bqplot
+ipycanvas
+ipyleaflet
+ipywidgets>=7.6
+jupyterlab_miami_nights
+jupyterlab==3.1.0b1
+jupyterlab-drawio
+jupyterlite==0.1.0a5
+theme-darcula
+jupyterlab-fasta>=3,<4
+jupyterlab-geojson>=3,<4
+plotly>=5,<6
