--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           python -m pip install -r requirements.txt
       - name: Build the JupyterLite site
         run: |
-          jupyter lite build --files 1_Python
+          jupyter lite build --files 0_intro 1_Python
       - name: Upload (dist)
         uses: actions/upload-artifact@v2
         with:
