--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,11 +5,13 @@ edit_uri: ""
 nav:
   - Binder: https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1-2021%26urlpath%3Dlab%252Ftree%252Fitc1-2021%252Ffiles%26branch%3Dmaster
   - Python:
-    - Utilisation de Jupyter: files/0_intro/0_jupyter.ipynb
+    - files/0_intro/0_jupyter.ipynb
     - files/1_Python/0_variables.ipynb
     - files/1_Python/1_fonctions.ipynb
     - files/1_Python/2_conditions.ipynb
     - files/1_Python/3_boucles.ipynb
+  - TP du 1er semestre
+    - files/2_tp_semestre1/2_recherche.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
