--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,5 +41,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
-          branch: gh-pages2
+          repository-name: fortierq/itc-jupyterlite
+          branch: gh-pages
           folder: dist
