--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
   - TPs 1er semestre:
     - files/2_tp_semestre1/1_dictionnaire.ipynb
     - files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+    - files/2_tp_semestre1/3_module.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
