--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '16'
 
       - run: |
-          pip install mkdocs-material
+          pip install mkdocs-material scipy
           mkdir -p docs
           TMP_DIR=$(mktemp -d)
           
