--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
     - files/2_tp_semestre1/2_boucles_imbriquees.ipynb
     - files/2_tp_semestre1/3_module.ipynb
     - files/2_tp_semestre1/4_dichotomie.ipynb
+    - files/2_tp_semestre1/5_recursivite.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
