--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - files/2_tp_semestre1/4_dichotomie.ipynb
     - files/2_tp_semestre1/5_recursivite.ipynb
     - files/2_tp_semestre1/6_fractales.ipynb
+    - files/2_tp_semestre1/7_glouton.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
