--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - files/2_tp_semestre1/5_recursivite.ipynb
     - files/2_tp_semestre1/6_fractales.ipynb
     - files/2_tp_semestre1/7_glouton.ipynb
+    - files/2_tp_semestre1/8_matrice_image.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
