--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
     - files/2_tp_semestre1/7_glouton.ipynb
     - files/2_tp_semestre1/8_matrice_image.ipynb
     - files/2_tp_semestre1/9_tris.ipynb
-    - "TP 10 : jeu de mastermind": files/2_tp_semestre1/10_mastermind.md
+    - "TP 10 : Jeu du Mastermind": files/2_tp_semestre1/10_mastermind.md
 plugins:
   - mkdocs-jupyter
 theme:
