--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - files/2_tp_semestre1/8_matrice_image.ipynb
     - files/2_tp_semestre1/9_tris.ipynb
     - "TP 10 : Jeu du Mastermind": files/2_tp_semestre1/10_mastermind.md
+    - "TP 11 : Jeu du Puissance 4": filessrc/2_tp_semestre1/11_puissance4/puissance4.md
 plugins:
   - mkdocs-jupyter
 theme:
