--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,11 +35,11 @@ nav:
       - "TP 1 : tranche minimum": files/3_algorithm_analysis/1_complexity/tp/tp_complexite.md
       - files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
     - Preuve de programme:
-      - Cours: files/3_algorithm_analysis/2_proof/slides/proof.pdf
+      - Cours: files/3_algorithm_analysis/2_proof/slides/proof.md
   - Réprésentation des nombres:
     - Représentation des entiers:
-      - Cours: files/4_representation/1_representation_int/representation_entiers.pdf
-      - TP: files/4_representation/1_representation_int/td/TP_binaire.pdf
+      - Cours: files/4_representation/1_representation_int/representation_entiers.md
+      - TP: files/4_representation/1_representation_int/td/TP_binaire.md
 plugins:
   - mkdocs-jupyter
 theme:
