--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,10 +36,7 @@ nav:
       - files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
     - Preuve de programme:
       - Cours: files/3_algorithm_analysis/2_proof/slides/proof.md
-  - Réprésentation des nombres:
-    - Représentation des entiers:
-      - Cours: files/4_representation/1_representation_int/representation_entiers.md
-      - TP: files/4_representation/1_representation_int/td/TP_binaire.md
+    - files/tp_parcoursup.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
