--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
     - files/2_tp_semestre1/9_tris.ipynb
     - "TP 10 : Jeu du Mastermind": files/2_tp_semestre1/10_mastermind.md
     - "TP 11 : Jeu du Puissance 4": files/2_tp_semestre1/11_puissance4/puissance4.md
+    - files/tp_parcoursup.ipynb
   - Analyse d'algorithmes:
     - Complexité: 
       - Cours: files/3_algorithm_analysis/1_complexity/slides/complexite.md
@@ -36,8 +37,9 @@ nav:
       - files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
     - Preuve de programme:
         - Cours: files/3_algorithm_analysis/2_proof/slides/proof.md
-  - files/tp_parcoursup.ipynb
-  
+  - Représentation des nombres:
+    - Représentation des entiers: files/4_representation/1_representation_int/representation_entiers.md
+    - TD Représentation des entiers: files/4_representation/1_representation_int/td/TP_binaire.md
   
 plugins:
   - mkdocs-jupyter
