--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Install the dependencies
         run: |
           python -m pip install -r requirements.txt
+          pip3 install ipython_genutils
       - name: Build the JupyterLite site
         run: |
           jupyter lite build
