--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,8 +39,7 @@ nav:
         - Cours: files/3_algorithm_analysis/2_proof/slides/proof.md
   - Représentation des nombres:
     - Représentation des entiers: files/4_representation/1_representation_int/representation_entiers.md
-    - TD Représentation des entiers: files/4_representation/1_representation_int/td/TP_binaire.md
-  
+    - TP Représentation des entiers: files/4_representation/1_representation_int/td/TP_binaire.md
 plugins:
   - mkdocs-jupyter
 theme:
