--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,8 @@ nav:
     - TP représentation des entiers: files/4_representation/1_representation_int/td/TP_binaire.md
     - Représentation des flottants: files/4_representation/2_representation_float/representation_flottants.md
     - TP représentation des flottants: files/4_representation/2_representation_float/tp/tp_flottant.md
+  - Graphes:
+    - Définition: files/5_graph/1_definition/1_graph.md
 plugins:
   - mkdocs-jupyter
 theme:
