--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
     - TP représentation des flottants: files/4_representation/2_representation_float/tp/tp_flottant.md
   - Graphes:
     - Définition: files/5_graph/1_definition/1_graph.md
+    - files/5_graph/tp/tp1/tp_graph1.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
