--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
     - Définitions: files/5_graph/1_definition/1_graph.md
     - Représentations: files/5_graph/2_representation/2_representation.md
     - files/5_graph/tp/tp1/tp_graph1.ipynb
+    - files/5_graph/tp/tp2/tp_graph2.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
