--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
     - Représentations: files/5_graph/2_representation/2_representation.md
     - files/5_graph/tp/tp1/tp_graph1.ipynb
     - files/5_graph/tp/tp2/tp_graph2.ipynb
+    - files/5_graph/tp/tp3/tp_pagerank.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
