--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,12 +44,13 @@ nav:
     - TP représentation des flottants: files/4_representation/2_representation_float/tp/tp_flottant.md
   - Graphes:
     - Définitions: files/5_graph/1_definition/1_graph.md
-    - Représentations: files/5_graph/2_representation/2_representation.md
+    - Représentations: 
+      - files/5_graph/2_representation/2_representation.md
+      - files/5_graph/tp/tp2/tp_graph2.ipynb
+      - files/5_graph/tp/tp3/tp_pagerank.ipynb
     - Parcours:
       - files/5_graph/3_traversal/traversal.ipynb
-    - files/5_graph/tp/tp1/tp_graph1.ipynb
-    - files/5_graph/tp/tp2/tp_graph2.ipynb
-    - files/5_graph/tp/tp3/tp_pagerank.ipynb
+      - files/5_graph/tp/tp4/tp_labyrinth.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
