--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ nav:
     - Parcours:
       - Cours: files/5_graph/3_traversal/3_traversal.md
       - files/5_graph/3_traversal/traversal.ipynb
-      - files/5_graph/tp/tp4/tp_labyrinth.ipynb
+      #- files/5_graph/tp/tp4/tp_labyrinth.ipynb
       - files/5_graph/tp/tp4/tp_dfs.ipynb
 plugins:
   - mkdocs-jupyter
