--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,9 @@ site_url: https://fortierq.github.io/itc1
 repo_url: https://github.com/fortierq/itc1
 edit_uri: ""
 nav:
-  - Binder: https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1-2021%26urlpath%3Dlab%252Ftree%252Fitc1-2021%252Ffiles%26branch%3Dmaster
-  - Basthon: https://notebook.basthon.fr
+  - Colab: https://colab.research.google.com/
+#  - Binder: https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1-2021%26urlpath%3Dlab%252Ftree%252Fitc1-2021%252Ffiles%26branch%3Dmaster
+#  - Basthon: https://notebook.basthon.fr
   - DS:
     - DS 1 corrigé: ds/ds1_correction.md
     - DS 2: ds/ds2.pdf
