--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
     - DS 2: ds/ds2.pdf
     - Corrigé DS 2: ds/DS2corrigé.md
     - Corrigé DS 3: files/ds/ds3/ds3_cor.md
-    - DS 4: ds/ds4/ds_coloring.pdf
+    - DS 4: ds/ds4/ds_coloring.md
     - ds/ds4/ds_coloring.ipynb
 
   - Python:
