--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,8 +11,8 @@ nav:
     - DS 2: ds/ds2.pdf
     - Corrigé DS 2: ds/DS2corrigé.md
     - Corrigé DS 3: files/ds/ds3/ds3_cor.md
-    - DS 4: ds/ds4/ds_coloring.md
-    - ds/ds4/ds_coloring.ipynb
+    - DS 4: files/ds/ds4/ds_coloring.md
+    - files/ds/ds4/ds_coloring.ipynb
 
   - Python:
     - files/0_intro/0_jupyter.ipynb
