--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,7 @@ nav:
       - files/5_graph/3_traversal/dfs/dfs.ipynb
       - files/5_graph/3_traversal/labyrinth.ipynb
       - files/5_graph/tp/tp4/tp_dfs.ipynb
-    - Cours parcours en largeur:
+    - Parcours en largeur:
       - cours: files/5_graph/3_traversal/bfs/bfs.md
       - files/5_graph/3_traversal/bfs/bfs.ipynb
       - files/5_graph/tp/tp5/tp_bfs.ipynb
