--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Informatique commune en 1ère année de CPGE"
+site_name: "Informatique commune en 1ère année en CPGE"
 site_url: https://fortierq.github.io/itc1
 repo_url: https://github.com/fortierq/itc1
 edit_uri: ""
