--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,9 @@ nav:
       - files/5_graph/3_traversal/bfs/code_bfs.ipynb
       - files/5_graph/tp/tp5/tp_bfs.ipynb
     - files/5_graph/tp/tp6/tp_exos_dfs_bfs.ipynb
+  - Plus courts chemins:
+    - Algorithme de Dijkstra: files/5_graph/4_dijkstra/graph_shortest_path.md
+    - "Code : Algorithme de Dijkstra": files/5_graph/4_dijkstra/dijkstra.ipynb
 plugins:
   - mkdocs-jupyter
 theme:
