--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: "Informatique commune en 1ère année en CPGE"
-site_url: https://fortierq.github.io/itc1
-repo_url: https://github.com/fortierq/itc1
+site_url: https://cpge-itc.github.io/itc1
+repo_url: https://github.com/cpge-itc/itc1
 edit_uri: ""
 nav:
-  - Colab: https://colab.research.google.com/
+  - Colab: https://colab.research.google.com
 #  - Binder: https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1-2021%26urlpath%3Dlab%252Ftree%252Fitc1-2021%252Ffiles%26branch%3Dmaster
 #  - Basthon: https://notebook.basthon.fr
   - DS:
