--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,9 +79,9 @@ plugins:
   - mkdocs-jupyter
 theme:
   name: material
-  custom_dir: site/overrides
-  logo: site/snake.png
-  favicon: site/snake.png
+  custom_dir: overrides
+  logo: snake.png
+  favicon: snake.png
   features:
     - navigation.instant
     - content.code.annotate
@@ -121,4 +121,4 @@ extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 extra_css:
-  - site/stylesheets/extra.css
+  - stylesheets/extra.css
